--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "airdrop-claim",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "dist/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    ".": "tsc && node ."
+
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ethers": "^6.2.0"
-  }
+    "chalk": "^5.2.0",
+    "ethers": "^5.4.0",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.5",
+    "typescript": "^5.0.2"
+  },
+  "type": "module"
 }
